--- a/tufte.css
+++ b/tufte.css
@@ -69,6 +69,12 @@ h3 { font-weight: 400;
      margin-bottom: 1.4rem;
      line-height: 1; }
 
+h4 { font-weight: 400;
+     font-size: 1.5rem;
+     margin-top: 2rem;
+     margin-bottom: 1.4rem;
+     line-height: 1; }
+
 hr { display: block;
      height: 1px;
      width: 55%;
